--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "Anh Vo",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
     "config": "^3.2.4",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13",
     "request": "^2.88.0"
   },
