--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "alphasense",
+  "name": "message_board",
   "version": "1.0.0",
-  "description": "coding test",
+  "description": "Building Message board using MERN stack",
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",    
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Anh Vo",
   "license": "MIT",
